Update success message and GIF in index.html

--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
         <!-- SUCCESS VIEW -->
         <div id="successView" class="view">
             <div class="heart-anim">💖</div>
-            <h1 style="color: #ff4d6d;">Ура! Я такий щасливий!</h1>
-            <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Не можу дочекатися, щоб провести цей час із тобою!</p>
-            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif" alt="Happy Celebration" class="success-gif">
+            <h1 style="color: #ff4d6d;">Цілую, сонечко!</h1>
+            <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Бонус: я зробив нам гіфку 💖 </p>
+            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/arm1.gif" alt="Happy Celebration" class="success-gif">
             <button class="btn-back" onclick="window.location.reload()">Скинути</button>
         </div>
     </div>
