--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div id="questionView" class="view">
             <h1 style="color: #ff4d6d; margin-bottom: 10px;">Манюнічка моя...</h1>
             <p style="font-size: 1.1em; color: #666;">Чи будеш моєю МанюньВалентиною?</p>
-            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'">
+            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss.jpg'">
             <button class="yes-btn" onclick="celebrate()">ТАК! ❤️</button>
         </div>
 
