--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
         <div id="questionView" class="view">
             <h1 style="color: #ff4d6d; margin-bottom: 10px;">Манюнічка моя...</h1>
             <p style="font-size: 1.1em; color: #666;">Чи будеш моєю МанюньВалентиною?</p>
-            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss.jpg'">
+            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/
+                '">
             <button class="yes-btn" onclick="celebrate()">ТАК! ❤️</button>
         </div>
 
@@ -378,7 +379,7 @@
             <div class="heart-anim">💖</div>
             <h1 style="color: #ff4d6d;">Цілую, сонечко!</h1>
             <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Бонус: я зробив нам гіфку 💖 </p>
-            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss3.gif" alt="Happy Celebration" class="success-gif">
+            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss4.gif" alt="Happy Celebration" class="success-gif">
             <button class="btn-back" onclick="window.location.reload()">Скинути</button>
         </div>
     </div>
