--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             max-width: 550px;
             max-height: 94vh;
             overflow-y: auto;
+            overflow-x: hidden; /* Removes horizontal scrollbar */
             position: relative;
             z-index: 10;
         }
@@ -329,7 +330,7 @@
                 <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                     <div class="puzzle-grid" id="puzzleGrid"></div>
                     <div class="puzzle-full-image-overlay" id="puzzleFullImageOverlay">
-                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/full-image.png'"/>
+                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'"/>
                     </div>
                 </div>
             </div>
@@ -369,8 +370,7 @@
         <div id="questionView" class="view">
             <h1 style="color: #ff4d6d; margin-bottom: 10px;">Манюнічка моя...</h1>
             <p style="font-size: 1.1em; color: #666;">Чи будеш моєю МанюньВалентиною?</p>
-            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/
-                '">
+            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'">
             <button class="yes-btn" onclick="celebrate()">ТАК! ❤️</button>
         </div>
 
@@ -378,7 +378,7 @@
         <div id="successView" class="view">
             <div class="heart-anim">💖</div>
             <h1 style="color: #ff4d6d;">Цілую, сонечко!</h1>
-            <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Бонус: я зробив нам гіфку 💖 </p>
+            <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Бонус: я зробив нам гіфку 💖</p>
             <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss4.gif" alt="Happy Celebration" class="success-gif">
             <button class="btn-back" onclick="window.location.reload()">Скинути</button>
         </div>
@@ -533,7 +533,7 @@
             });
             let headX = snake[0].x, headY = snake[0].y;
             if(snakeDirection==="left") headX-=boxSize; if(snakeDirection==="up") headY-=boxSize;
-            if(snakeDirection==="right") headX+=boxSize; if(snakeDirection==="down") headY+=boxSize;
+            if(snakeDirection==="right") headX+=boxSize; if(snakeDirection==="down") headY-=boxSize;
             if(headX<0) headX=280; if(headX>280) headX=0; if(headY<0) headY=280; if(headY>280) headY=0;
             if(headX===food.x && headY===food.y) {
                 snakeScore++; spawnFood(); updateSnakeUI();
@@ -550,7 +550,7 @@
             switchView('memoryView');
             const grid = document.getElementById('memoryGrid'); grid.innerHTML = '';
             let matches = 0, flipped = [];
-            const meats = ['🍗','🍖','🥩','🥓','🌭','🍔','🥪','🥘'];
+            const meats = ['🍗','🍣','🥩','🥓','🌭','🍔','🍆','🍝'];
             const deck = [...meats, ...meats].sort(()=>Math.random()-0.5);
             deck.forEach(emoji => {
                 const card = document.createElement('div'); card.className = 'memory-card';
