--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
             <div class="envelope-flap"></div>
         </div>
-        <p style="margin-top: 20px; color: #d63384; font-weight: bold;">Відкрий для сюрпризу!</p>
+        <p style="margin-top: 20px; color: #d63384; font-weight: bold;">Відкрий мене!</p>
     </div>
 
     <div class="container">
@@ -330,7 +330,7 @@
                 <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                     <div class="puzzle-grid" id="puzzleGrid"></div>
                     <div class="puzzle-full-image-overlay" id="puzzleFullImageOverlay">
-                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'"/>
+                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/full-image.png'"/>
                     </div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
         <div id="questionView" class="view">
             <h1 style="color: #ff4d6d; margin-bottom: 10px;">Манюнічка моя...</h1>
             <p style="font-size: 1.1em; color: #666;">Чи будеш моєю МанюньВалентиною?</p>
-            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'">
+            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss.jpg'">
             <button class="yes-btn" onclick="celebrate()">ТАК! ❤️</button>
         </div>
 
