Update title and image sources in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>❤️ Спеціальна доставка</title>
+    <title>❤️ Валентинка для манюнькіса </title>
     <style>
         * {
             margin: 0;
@@ -348,7 +348,7 @@
                 <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                     <div class="puzzle-grid" id="puzzleGrid"></div>
                     <div class="puzzle-full-image-overlay" id="puzzleFullImageOverlay">
-                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'"/>
+                        <img src="images/full-image.png" alt="" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/full-image.png'"/>
                     </div>
                 </div>
             </div>
@@ -391,7 +391,7 @@
         <div id="questionView" class="view">
             <h1 style="color: #ff4d6d; margin-bottom: 10px;">Манюнічка моя...</h1>
             <p style="font-size: 1.1em; color: #666;">Чи будеш моєю МанюньВалентиною?</p>
-            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'">
+            <img src="image_6dc992.png" alt="Be my Valentine?" class="valentine-img" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss.jpg'">
             <button class="yes-btn" onclick="celebrate()">ТАК! ❤️</button>
         </div>
 
@@ -400,7 +400,7 @@
             <div class="heart-anim">💖</div>
             <h1 style="color: #ff4d6d;">Цілую, сонечко!</h1>
             <p style="margin: 20px 0; font-size: 1.2em; font-weight: bold;">Бонус: я зробив нам гіфку 💖</p>
-            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss4.gif" alt="Happy Celebration" class="success-gif" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/giphy.gif'">
+            <img src="https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss4.gif" alt="Happy Celebration" class="success-gif" onerror="this.src='https://raw.githubusercontent.com/YevhenUa-no/myM/main/kiss4.gif'">
             <button class="btn-back" onclick="window.location.reload()">Скинути</button>
         </div>
     </div>
