Change surprise message text in index.html

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
             <div class="envelope-flap"></div>
         </div>
-        <p style="margin-top: 20px; color: #d63384; font-weight: bold;">Відкрий для сюрпризу!</p>
+        <p style="margin-top: 20px; color: #d63384; font-weight: bold;">Відкрий мене!</p>
     </div>
 
     <div class="container">
