--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
             </div>
             <div class="puzzle-controls">
-                <button class="btn-small" onclick="scramblePuzzle(10); renderPuzzle();">Спростити</button>
+                <button class="btn-small" onclick="scramblePuzzle(15); renderPuzzle();">Змішати (15)</button>
             </div>
             <div class="puzzle-reveal-text" id="puzzleRevealText">
                 <p style="font-size: 1.1em; color: #d63384; margin-bottom: 15px;">...ти мене доповнюєш.</p>
@@ -441,7 +441,7 @@
             document.getElementById('puzzleFullImageOverlay').classList.remove('show');
             document.getElementById('puzzleGridWrap').classList.remove('revealing');
             document.getElementById('puzzleRevealText').classList.remove('show');
-            scramblePuzzle(100); // Default high difficulty
+            scramblePuzzle(15); // Set to 15 iterations as requested
             renderPuzzle();
         }
 
@@ -560,7 +560,6 @@
             let headX = snake[0].x, headY = snake[0].y;
             if(snakeDirection==="left") headX-=boxSize; if(snakeDirection==="up") headY-=boxSize;
             if(snakeDirection==="right") headX+=boxSize; 
-            // FIX: down should increment Y
             if(snakeDirection==="down") headY+=boxSize;
 
             if(headX<0) headX=280; if(headX>280) headX=0; if(headY<0) headY=280; if(headY>280) headY=0;
